--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "migration": "node ./src/migrations/index.js"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
